--- a/src/components/GithubCode.scss
+++ b/src/components/GithubCode.scss
@@ -65,6 +65,19 @@
   transition: all 1000ms ease;
 }
 
+#kanji-background {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  // left: 10vw;
+  // right: 10vw;
+  // top: 5vw;
+  mix-blend-mode: overlay;
+  filter: brightness(0) blur(0.3rem);
+  opacity: 0.15;
+  z-index: 0;
+}
+
 // .GithubCodeContainer-exit {
 //   opacity: 1 !important;
 //   filter: blur(0);
