--- a/src/components/Landscape.scss
+++ b/src/components/Landscape.scss
@@ -56,12 +56,30 @@ h2.landscape-name {
   opacity: 0.8;
   animation: shine 20s infinite ease;
   mix-blend-mode: screen;
+  transform: scale(1.3);
 
   @keyframes shine {
     50% {
       opacity: 1;
-      transform: scale(1.2);
+      transform: scale(1.5);
       transform-origin: center bottom;
+    }
+  }
+}
+
+#sunrays {
+  z-index: 2;
+  animation: sunray-spin 120s infinite linear;
+  opacity: 0.4;
+  filter: blur(0.2rem);
+
+  @keyframes sunray-spin {
+    0%{
+      transform: rotate(0deg) scale(1.8)
+    }
+    100% {
+      transform: rotate(360deg) scale(1.8)
+
     }
   }
 }
