--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -1,9 +1,9 @@
 // @import url('https://fonts.googleapis.com/css?family=Noto+Serif+SC:100,400&subset=japanese');
 @import url('https://fonts.googleapis.com/css?family=Cinzel:400');
-@font-face {
-  font-family: 'Aozora Mincho';
-  src: url('../assets/fonts/AozoraMincho-thin.ttf');
-}
+// @font-face {
+//   font-family: 'Aozora Mincho';
+//   src: url('../assets/fonts/AozoraMincho-thin.ttf');
+// }
 
 $text-shadow-spread: 0.03;
 $text-shadow-opacity: 0;
