--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -1,4 +1,3 @@
-// @import url('https://fonts.googleapis.com/css?family=Noto+Serif+SC:100,400&subset=japanese');
 @import url('https://fonts.googleapis.com/css?family=Cinzel:400');
 // @font-face {
 //   font-family: 'Aozora Mincho';
@@ -18,19 +17,14 @@ nav {
   width: 100%;
   height: 6vh;
   z-index: 100;
-  // user-select: none;
 
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  // pointer-events: none;
-
 }
 
 li.nav-item {
-    // margin-top: -5vh;
-    // font-size: 1.5rem;
     margin: 0 0;
     font-size: 2.3vh;
     color: rgb(223, 223, 223);
@@ -40,7 +34,6 @@ li.nav-item {
     z-index: 101;
     pointer-events: all;
     user-select: none;
-    // white-space: nowrap;
     
     display: flex;
     flex: auto;
@@ -53,18 +46,8 @@ li.nav-item {
       filter: brightness(1.5);
       animation: glow 0.8s ease-in-out infinite alternate;
 
-      // Animation based on https://www.w3schools.com/howto/howto_css_glowing_text.asp
+      // Animation lightly based on https://www.w3schools.com/howto/howto_css_glowing_text.asp
       @keyframes glow {
-        // from {
-        //   text-shadow:
-        //     0 0 1rem * $text-shadow-spread #ffffff * $text-shadow-opacity,
-        //     0 0 2rem * $text-shadow-spread #ffffff * $text-shadow-opacity,
-        //     0 0 3rem * $text-shadow-spread #d3d3d3 * $text-shadow-opacity,
-        //     0 0 4rem * $text-shadow-spread #cfcfcf * $text-shadow-opacity,
-        //     0 0 5rem * $text-shadow-spread #cfcfcf * $text-shadow-opacity,
-        //     0 0 6rem * $text-shadow-spread #cfcfcf * $text-shadow-opacity,
-        //     0 0 7rem * $text-shadow-spread #cfcfcf * $text-shadow-opacity;
-        // }
         to {
           $new-text-shadow-opacity: $text-shadow-opacity + $text-shadow-plus;
           text-shadow: 
@@ -89,8 +72,6 @@ li.nav-item {
       white-space: nowrap;
       word-wrap: break-word !important;
       word-break: break-all !important;
-      // cursor: auto;
-      // animation: none;
       z-index: 110;
 
       display: flex;
@@ -102,9 +83,6 @@ li.nav-item {
       }
 
       p.subtitle {
-        // position: absolute;
-        // left: 50vw;
-        // right: 50vw;
         display: block;
         background: none;
         color: rgb(223, 223, 223);
@@ -112,17 +90,12 @@ li.nav-item {
         font-size: 1vh;
         margin: 0;
         line-height: 1.5vh;
-        // white-space: nowrap;
       }
     }
   }
 
 .nav-overlay {
   position: fixed;
-  // left: 0;
-  // right: 0;
-  // top: 0;
-  // bottom: 0;
   width: 100vw;
   height: 100vh;
   opacity: 0.9;
