--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -29,7 +29,7 @@ li.nav-item {
     font-size: 2.3vh;
     color: rgb(223, 223, 223);
     padding: 0 2.4vh;
-    font-family: 'Aozora Mincho';
+    font-family: 'Cormorant', serif;
     mix-blend-mode: screen;
     z-index: 101;
     pointer-events: all;
@@ -68,7 +68,7 @@ li.nav-item {
       overflow: visible;
       font-weight: 100;
       flex-grow: 10;
-      font-family: 'Aozora Mincho';
+      font-family: serif;
       white-space: nowrap;
       word-wrap: break-word !important;
       word-break: break-all !important;
